--- a/AcousticsNowPlaying/Properties/Settings.settings
+++ b/AcousticsNowPlaying/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AcousticsNowPlaying.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="serverBaseAddress" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://example.com/amp/</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
