Fixed up auth for ACM (it works), added room options

--- a/AcousticsNowPlaying/Properties/Settings.settings
+++ b/AcousticsNowPlaying/Properties/Settings.settings
@@ -5,5 +5,17 @@
     <Setting Name="serverBaseAddress" Type="System.String" Scope="User">
       <Value Profile="(Default)">http://example.com/amp/</Value>
     </Setting>
+    <Setting Name="userName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="promptForPassword" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="showExtraInfo" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="roomName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
