--- a/AcousticsNowPlaying/app.config
+++ b/AcousticsNowPlaying/app.config
@@ -10,6 +10,18 @@
             <setting name="serverBaseAddress" serializeAs="String">
                 <value>http://example.com/amp/</value>
             </setting>
+            <setting name="userName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="promptForPassword" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="showExtraInfo" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="roomName" serializeAs="String">
+                <value />
+            </setting>
         </AcousticsNowPlaying.Properties.Settings>
     </userSettings>
 </configuration>
